# Experiment_Robotis_Mobile_Manipulator

./: turtlebot3_teleop_xboxone_jspark_control
Doc/: 4wheel_modification
Doc/Dynamixel_control_table/: control_table_12  control_table_15  control_table_2
Doc/code_tree/: Robotis_ROS_excode_tree.ods  mycode_tree.ods  rviztree.ods
Doc/command_list/: mobile_manipulator.sh  mobile_manipulator_firmware  realsense_launch
Doc/joy_reference_code/: teleop_twist_joy_1.cpp
[0]Doc/[1]backup_mycode/4wheel_mecanum_modification/: 4wheel_modification  mecanum_modified
[0]Doc/[1]backup_mycode/Dynamixel_control_table/: control_table_1  control_table_11  control_table_13  control_table_14
[0]Doc/[1]backup_mycode/myrviz/: open_manipulator_with_tb3_manipulation.rviz
[0]Doc/[1]backup_mycode/myurdf/: open_manipulator_with_tb3_waffle_pi.urdf.xacro  turtlebot3_waffle_pi_for_open_manipulator_4wheel.urdf.xacro
[0]Doc/[2]command_list/: rosbag_method
[0]Doc/[4]practice_code/: logdata_test.py  trac_ik_pub.py
[0]Doc/[5]etc/HEBI_Mobile_Robot_folder/: Tip_Over_ClosedLoop_Tcontrol.py  Tip_Over_ClosedLoop_Vcontrol.py  Tip_Over_OpenLoop.py  diff_drive_JSPark.py  diff_drive_JSPark_joystic.py  main_mobilerobot_dynamics.m  main_mobilerobot_kinematics.m  test.py  xbox360_controller.py
[0]Doc/[5]etc/HEBI_Mobile_Robot_folder/HEBI_setting/: BuildUp  setup_robot_computer.sh
[0]Doc/[5]etc/HEBI_Mobile_Robot_folder/diff_drive/: diff_drive.py
[0]Doc/[5]etc/HEBI_Mobile_Robot_folder/gaitech/: hebi_demo.py  keyboard_test.py
[0]Doc/[5]etc/ROBOTIS_manipulation_jostic_답변/turtlebot3_conveyor/: manual
[0]Doc/[5]etc/ROBOTIS_manipulation_jostic_답변/turtlebot3_conveyor/turtlebot3_ex01_parallel_translation/: Chain.h  MyDynamixel.cpp  (+3 more)
[0]Doc/[5]etc/pygame-xbox360controller-master/: xbox360_controller.py
[1]firware_libraries/MemoryFree/: MemoryFree.cpp
[1]firware_libraries/mpc_constrained_naive_engl/: konfig.h  mpc.h  mpc_constrained_naive_engl.ino
[1]firware_libraries/mpc_constrained_schur_engl/: mpc.h  mpc_constrained_schur_engl.ino
[1]firware_libraries/test/: test.ino
[1]firware_libraries/turtlebot3/include/turtlebot3/: turtlebot3_controller.h  turtlebot3_motor_driver.h
[1]firware_libraries/turtlebot3/src/turtlebot3/: turtlebot3_controller.cpp  turtlebot3_motor_driver.cpp
[2]ROS_src/open_manipulator/open_manipulator_controller/launch/: open_manipulator_controller.launch
[2]ROS_src/open_manipulator_with_tb3/open_manipulator_with_tb3_tools/: CMakeLists.txt  package.xml
[2]ROS_src/open_manipulator_with_tb3/open_manipulator_with_tb3_tools/include/open_manipulator_with_tb3_tools/: trac_ik_teleop.h
[2]ROS_src/open_manipulator_with_tb3/open_manipulator_with_tb3_tools/launch/: navigation.launch  trac_ik_teleop.launch
[2]ROS_src/open_manipulator_with_tb3/open_manipulator_with_tb3_tools/rviz/: open_manipulator_with_tb3_navigation.rviz  open_manipulator_with_tb3_slam.rviz
[2]ROS_src/open_manipulator_with_tb3/open_manipulator_with_tb3_tools/src/: trac_ik_teleop.cpp
[2]ROS_src/open_manipulator_with_tb3/open_manipulator_with_tb3_waffle_pi_moveit/config/: om_with_tb3.srdf
[2]ROS_src/track_ik/trac_ik_examples/launch/: pr2_arm.launch
[2]ROS_src/track_ik/trac_ik_python/launch/: om_python.launch
[2]ROS_src/track_ik/trac_ik_python/scripts/: test_pkg.py  test_wrapper.py
[2]ROS_src/turtlebot3/turtlebot3_description/urdf/: jspark_mobile_robot.urdf.xacro
[2]ROS_src/turtlebot3/turtlebot3_teleop/launch/: turtlebot3_teleop_xboxone_jspark.launch
[2]ROS_src/turtlebot3/turtlebot3_teleop/nodes/: turtlebot3_teleop_key  turtlebot3_teleop_xboxone_jspark  turtlebot3_teleop_xboxone_jspark_old  turtlebot3_teleop_xboxone_jspark_twowheel
[3]experiment/: logdata1.txt
[3]experiment/20191106_Data/: log_plot_m.m  logdata_calibration.txt  logdata_cl1.txt  logdata_cl3.txt  logdata_cl4.txt  logdata_op1.txt
[3]experiment/20191106_Data/V_ref/: profile.m  r_05_20.txt  r_10_05.txt  r_20_10.txt
[3]experiment/20191118_data/: log_plot_comparison.m  logdata_cl6.txt  logdata_op.txt
[3]experiment/V_ref/: r_05_05.txt  r_05_10.txt  r_10_01.txt  r_20_01.txt
experiment/20191106_Data/: logdata_cl2.txt  logdata_cl5.txt
experiment/20191106_Data/V_ref/: r_05_01.txt  r_05_50.txt  r_10_10.txt  r_10_20.txt  r_10_50.txt  r_20_05.txt  r_20_20.txt  r_20_50.txt  textfilesave.m
libraries/turtlebot3/include/turtlebot3/: turtlebot3_controller.h  turtlebot3_motor_driver.h
src/track_ik/trac_ik_examples/src/: ik_tests.cpp
src/track_ik/trac_ik_lib/src/: trac_ik.cpp
(+5 files in other folders)
